fixed about page being cut off and changed list styles on contact page

--- a/src/style.css
+++ b/src/style.css
@@ -115,7 +115,7 @@ h1 {
   cursor: default;
 }
 h2 {
-  font-size: clamp(1rem, 2.5vw, 2rem);
+  font-size: clamp(1.5rem, 2.5vw, 2rem);
   font-weight: 600;
 }
 h3 {
